# SmartCitySimulator

./: LICENSE  README.md  Rapport de Projet cpp.docx
include/: CMakeLists.txt  config.h  engine.h  traffic_system.h  vehicle.h  world.h
src/: engine.cpp  main.cpp  traffic_system.cpp  vehicle.cpp  world.cpp
